docs/ansible-kubernetes-manifests/global-default-deny.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-default-deny
  namespace: istio-system
spec:
  {}
